* changed the TESSreal type to double which suits the PointLine better. * added sln and vcxproj for vs2017

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,11 @@ Thumbs.db
 
 ## Build dir
 Build/*
+win32/vs2017/bin/*
+win32/vs2017/objs/*
+
+## Visual Studio directories
+.vs
 
 ## xcode specific
 *xcuserdata*
